# tabpfn-causal-synthetic

./: .gitignore  README.md  pyproject.toml
causal_experiments/: __init__.py
causal_experiments/collider_validation/: __init__.py  measure_correlation.py
causal_experiments/results/: validate_paired_results.py
causal_experiments/utils/: __init__.py  csuite_loader.py  dag_utils.py  determinism.py  experiment_utils.py  forest_plot_config.py  forest_plot_utils.py  intervention_remapping.py  metrics.py  run_pc_discovery.py  scm_data.py  visualization_config.py
examples/unsupervised/: basic_example_with_my_scm.py  basic_example_with_my_scm_CPDAG.py  (+2 more)
external_baselines/: README.md
external_baselines/tabularargn/: README.md  pyproject.toml
external_baselines/tabularargn/results/final_five_datasets_20260428/: README.md
external_baselines/tabularargn/results/final_five_datasets_20260428/analysis/: pairwise_tabularargn_vs_tabpfn_by_cell.csv  raw_nnaa_pairwise_audit.csv  tabularargn_vs_tabpfn_dag_aware_dataset_summary.csv  tabularargn_vs_tabpfn_paired_long.csv  tabularargn_vs_tabpfn_win_counts.csv
external_baselines/tabularargn/results/final_five_datasets_20260428/recovery/: README.md  apply_cmd_patch.py  cmc_n20_nonfinite_cmd_seeds.txt  regenerate_paired_outputs.py  regeneration_validation.json  source_synthetic_sha256.tsv
external_baselines/tabularargn/results/final_five_datasets_20260428/scripts/: analyze_tabularargn_vs_tabpfn.py
external_baselines/tabularargn/scripts/: recompute_saved_synthetic_cmd.py  run_tabularargn_comparison.py
(+448 files in other folders)
